# education

./: .gitignore  DAILY_CONTENT_DIFFERENTIATION.md  ENGLISH_SCRIPT_NAMING_REFACTOR.md  ENGLISH_STRUCTURE_REFACTOR_PLAN.md  LEARNING_CONTENT_GENERATORS.md  LICENSE  MANIFEST.in  MODULAR_SYSTEM_GUIDE.md  PRACTICE_EXERCISES_GENERATOR.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  SUBJECT_STRUCTURE_TEMPLATE.md  __init__.py  data.db  education_manager.py  english_learning_content_generator.py  english_learning_plan_standalone.py  fsrs_template_generator.py  main.py  pyproject.toml
educational_projects/: README.md
educational_projects/chemistry/: README.md
educational_projects/english/: AI_OPTIMIZATION_SUMMARY.md  README.md  custom_plan_generator.py  enhanced_daily_plan_day_1_20250924_171120.docx  fast_plan_manager.py  generate_6month_plan.py  generate_phase_plan.py  plan_manager.py  word_learning_main.py
educational_projects/geography/: README.md
educational_projects/physics/: README.md
learning_data/english/: learning_progress.json  learning_progress_20250928_144906.json  morphology_progress.json  syntax_progress.json
learning_data/history/: learning_progress.json
llm_framework/: README.md  config.json  example.py  learning_plan_generator.py  llm_client.py  usage_examples.md
outputs/: OUTPUT_MIGRATION_SUMMARY.md  __init__.py  config.json  migrate_outputs.py  migration_report.json  output_manager.py
outputs/english/: english_learning_plan_20250928_140313.json  english_learning_plan_20250929_111633.json  english_learning_plan_20250929_112627.json  english_learning_plan_20250929_120309.json  english_learning_plan_20250929_120530.json  english_learning_plan_20250929_120913.json  english_learning_plan_20250929_122423.json  english_learning_plan_20250929_122843.json  english_learning_plan_20250929_132251.json  fsrs_learning_plan_20250929_123815.json  fsrs_learning_plan_20250929_125056.json  fsrs_learning_plan_20250929_125246.json  fsrs_standard_20250929_180351.json  fsrs_standard_20250929_181158.json  fsrs_template_20250929_131238.json  fsrs_template_20250929_132546.json  fsrs_template_20250929_133043.json  fsrs_template_20250929_134740.json  fsrs_template_20250929_134834.json  fsrs_template_20250929_135323.json  fsrs_template_20250929_142639.json  fsrs_template_20250929_143209.json  fsrs_template_20250929_143333.json  fsrs_template_20250929_143535.json  fsrs_template_20250929_144325.json  fsrs_template_20250929_145113.json  fsrs_template_20250929_145840.json  fsrs_template_20250929_150134.json  fsrs_template_20250929_150743.json  fsrs_template_20250929_150917.json  fsrs_template_20250929_151158.json  fsrs_template_20250929_151924.json  fsrs_template_20250929_153907.json  fsrs_template_20250929_155529.json  fsrs_template_20250929_162718.json  fsrs_template_20250929_164021.json  fsrs_template_20250929_165500.json  fsrs_template_20250929_165554.json  fsrs_template_20250929_165655.json  fsrs_template_20250929_170107.json  (+10 more)
src/: __init__.py
src/biology/: README.md
src/chinese/: README.md
src/core/: __init__.py  subject_base.py  subject_manager.py
src/english/: README.md  __init__.py  english_prompt_generator.py  generate_daily_learning_document.py  generate_daily_words.py  generate_morphology_content.py  read_learning_plan.py  (+4 more)
tests/: test_plan.md
(+532 files in other folders)
